Fix white space showing at the bottom when modal is open and scrolling down

--- a/app/assets/stylesheets/components/_company_home_main.scss
+++ b/app/assets/stylesheets/components/_company_home_main.scss
@@ -6,8 +6,7 @@
 // mobile first appraoch
 .home-container {
     position: relative;
-    top: 56px;
-    margin: 0 10px;
+    margin-top: 56px;
 
     &__section {
         padding: 128px 0 96px 0;
