--- a/app/assets/stylesheets/components/_workspace_home.scss
+++ b/app/assets/stylesheets/components/_workspace_home.scss
@@ -232,6 +232,7 @@
 
 .pill-link-container {
     flex: 0 1 auto;
+    display: flex;
     min-width: 1px;
     overflow: hidden;
     margin-left: 5px;
